# Criptoarbitraje

./: main.py  pyproject.toml
handlers/: telegram_handler.py
services/: arbitrage_service.py  update_service.py  wallet_service.py
utils/: config.py
