[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "ccxt>=4.4.30",
    "eth-account>=0.13.7",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "python-telegram-bot==20.7",
    "requests>=2.32.3",
    "telegram>=0.0.1",
    "web3>=7.10.0",
]
